<resources>
    <string name="app_name">Conceptor</string>
    <string name="title_activity_add_concept_view">AddConceptView</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="example_post_transcription">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="example_post_title">What is Lorem Ipsum?</string>
    <string name="example_post_image_transcription">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</string>
    <string name="write_a_title">Write a title</string>
    <string name="empty" />
    <string name="upload_image_message">Upload an image about concept</string>
    <string name="upload_image">Upload Image</string>
    <string name="write_an_explanation">write an explanation…</string>
    <string name="add_new_concept">Add New Concept</string>
    <string name="save_image">Save Image</string>
    <string name="save_concept">Save Concept</string>
    <string name="save">Save</string>
    <string name="much_did_had_call_new_drew_that_kept_limits_expect_wonder_law_she_now_has_you_views_woman_noisy_match_money_rooms_to_up_remark_it_eldest_length_oh_passed_off_because_yet_mistake_feeling_has_men_consulted_disposing_to_moonlight_ye_extremity_engage_piqued_in_on_coming_building_mr_concerns_servants_in_he_outlived_am_breeding_he_so_lain_good_miss_when_sell_some_at_if_told_hand_so_an_rich_gave_next_how_doubt_yet_again_see_son_smart_while_mirth_large_of_on_front_ye_he_greater_related_adapted_proceed_entered_an_through_it_examine_express_promise_no_past_add_size_game_cold_girl_off_how_old_of_be_talent_me_answer_do_relied_mistress_in_on_so_laughing_throwing_endeavor_occasion_welcomed_gravity_sir_brandon_calling_can_no_years_do_widow_house_delay_stand_prospect_six_kindness_use_steepest_new_ask_high_gone_kind_calm_call_as_ever_is_introduced_melancholy_estimating_motionless_on_up_as_do_of_as_by_belonging_therefore_suspicion_elsewhere_am_household_described_domestic_suitable_bachelor_for_landlord_fat_warmly_little_before_cousin_sussex_entire_men_set_blessing_it_ladyship_on_sensible_judgment_settling_outweigh_worse_linen_an_of_civil_jokes_leave_offer_parties_all_clothes_removal_cheered_calling_prudent_her_and_residence_for_met_the_estimable_disposing_mean_if_he_they_been_no_hold_mr_is_at_much_do_made_took_held_help_latter_person_am_secure_of_estate_genius_at">Much did had call new drew that kept. Limits expect wonder law she. Now has you views woman noisy match money rooms. To up remark it eldest length oh passed. Off because yet mistake feeling has men. Consulted disposing to moonlight ye extremity. Engage piqued in on coming. Building mr concerns servants in he outlived am breeding. He so lain good miss when sell some at if. Told hand so an rich gave next. How doubt yet again see son smart. While mirth large of on front. Ye he greater related adapted proceed entered an. Through it examine express promise no. Past add size game cold girl off how old. Of be talent me answer do relied. Mistress in on so laughing throwing endeavor occasion welcomed. Gravity sir brandon calling can. No years do widow house delay stand. Prospect six kindness use steepest new ask. High gone kind calm call as ever is. Introduced melancholy estimating motionless on up as do. Of as by belonging therefore suspicion elsewhere am household described. Domestic suitable bachelor for landlord fat. Warmly little before cousin sussex entire men set. Blessing it ladyship on sensible judgment settling outweigh. Worse linen an of civil jokes leave offer. Parties all clothes removal cheered calling prudent her. And residence for met the estimable disposing. Mean if he they been no hold mr. Is at much do made took held help. Latter person am secure of estate genius at.</string>
    <string name="i_learned_this_concept">I learned this concept</string>
</resources>