<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/write_a_title"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:id="@+id/addConceptActivityEditTextTitle">
    </EditText>

    <TextView
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:clickable="true"
        android:text="@string/upload_image_message"
        android:gravity="center"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:id="@+id/addConceptActivityImageView"
        android:contentDescription="@string/empty"
        android:focusable="true">
    </TextView>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/addConceptActivityUploadImageButton"
        android:text="@string/upload_image"
        android:layout_marginTop="10dp"
        android:layout_gravity="center">
    </Button>


    <EditText
        android:id="@+id/addConceptActivityEditTextPostDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/write_an_explanation"
        android:lines="10"
        android:inputType="textMultiLine" />






</LinearLayout>